feat: Support parsing SPDX license expressions
Signed-off-by: tison <wander4096@gmail.com>